2007-05-04  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* src/core/exmpp_xml.erl: Unlink port before stopping it. This
	prevents an 'EXIT' message sent to the port owner.

	* doc/overview.edoc: Nano update of the application overview.

2007-04-20  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* doc/Makefile.am: Fixed documentation build: the new sources layout
	broke it. Also add `make install' support.

2007-04-18  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* include/exmpp.hrl: Added resource binding namespace.

	* src/client/exmpp_client_binding.erl,
	src/server/exmpp_server_binding.erl: New modules to deal with Resource
	Binding.

	* src/client/exmpp_client_session.erl,
	src/server/exmpp_server_session.erl: New modules to deal with Session
	Establishment.

	* src/client/exmpp_client_tls.erl: Renamed a variable to be consistent
	with other modules.

	* src/Makefile.am, src/Emakefile.in, ebin/Makefile.am: Connected new
	modules to the build.

2007-04-12  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* src/core/exmpp_stream.erl, src/client/exmpp_client_stream.erl,
	src/server/exmpp_server_stream.erl: Removed `stream_' prefix from all
	functions.

	* src/server/exmpp_server_stream.erl (features): New function to build
	a features announcement stanza.

	* testsuite/check_stream.erl, testsuite/check_legacy_auth.erl:
	Corrected a comment.

	* testsuite/check_stream.erl: Updated to use new function names in
	`exmpp_stream'.

	* src/client/exmpp_client_tls.erl, src/server/exmpp_server_tls.erl:
	New modules to deal with TLS negotiation.

	* src/client/exmpp_client_compression.erl,
	src/server/exmpp_server_compression.erl: New modules to deal with
	stream compression negotiation.

	* src/client/exmpp_client_sasl.erl, src/server/exmpp_server_sasl.erl:
	New modules to deal with SASL transport.

	* src/Makefile.am, src/Emakefile.in, ebin/Makefile.am: Connected all
	new modules to the build. Disconnected `exmpp_factory' for future
	removal.
